# nntrainer

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  design.md  gemma-model-path.md  how-to-use-litert-lm-guide.md  meson.build  meson_options.txt  plan.md  streaming.diff  user-request.md  windows-native.ini
.github/: CODEOWNERS
.github/workflows/: causallm_android.yml  daily_build_windows_arm.yml  daily_build_windows_x86_64.yml  pdebuild.yml  ubuntu_clean_meson_build_clang.yml  windows_cross_compile.yml
Applications/: README.md  meson.build
Applications/AlexNet/: README.md
Applications/CausalLM/: README.md  build_android.sh  causal_lm.cpp  causal_lm.h  chat_template.cpp  chat_template.h  chat_template_engine.cpp  chat_template_engine.h  factory.h  gptoss_cached_slim_causallm.h  gptoss_causallm.h  install_android.sh  kv_cache_manager.cpp  kv_cache_manager.h  llm_util.hpp  main.cpp  meson.build  nntr_qwen3_causallm.cpp  nntr_qwen3_causallm.h  nntr_qwen3_moe_causallm.cpp  nntr_qwen3_moe_causallm.h  quantize.cpp  qwen3_cached_slim_moe_causallm.h  qwen3_causallm.cpp  qwen3_causallm.h  qwen3_moe_causallm.h  qwen3_slim_moe_causallm.h  run_test.sh  run_test_causallm.py  test_causallm.cpp  test_chat_template.cpp
Applications/CausalLM/test/: gen_rms_norm_golden.py  meson.build  rms_norm_training.nnlayergolden  test_causallm_layers_torch.py  test_mha_core_torch.py  test_rms_norm_torch.py  unittest_rms_norm.cpp  verify_with_torch.py
Applications/Custom/: mae_loss.cpp  mae_loss.h  momentum.cpp  momentum.h  pow.cpp  pow.h  rnnt_loss.cpp  rnnt_loss.h
Applications/GraphVisualizer/: DESIGN.md  README.md  package.json
Applications/LogisticRegression/: README.md
Applications/MNIST/Tensorflow/tflite/: gen_bmp.py  main.cpp  meson.build  mnist.tflite
Applications/QuickAI/: Architecture.md  AsyncAndStreaming.md  QUICKSTART.md  gradle.properties  plan.md  request-mail1.md  (+3 more)
Applications/QuickAI/LauncherApp/src/main/cpp/: CMakeLists.txt  quickai_jni.cpp
Applications/QuickAI/QuickDotAI/src/main/cpp/: CMakeLists.txt  quickai_jni.cpp
Applications/QuickAI/QuickDotAI/src/main/cpp/include/: quick_dot_ai_api.h  streamer.h
Applications/QuickAI/service-app/app/src/main/cpp/: CMakeLists.txt  native_engine_jni.cpp
Applications/VGG/Tensorflow/tflite/: main.cpp  meson.build
api/: nntrainer-api-common.h
configurations/: windows-cross-arm-ci.ini  windows_cross_arm.ini
debian/: control  nntrainer-dev.install
docs/: coding-convention.md  contributing.md  getting-started-windows.md  getting-started.md  how-to-debug-on-remote-android.md  how-to-run-example-android.md  how-to-run-examples.md  symbolic-tensor-api.md  thread-manager-design.md  weight-format-specification.md
jni/: Android.mk  Application.mk.in  meson.build  prepare_openblas.sh
nntrainer/: app_context.cpp  app_context.h  cl_buffer_manager.cpp  cl_buffer_manager.h  cl_context.cpp  cl_context.h  cl_svm_allocator.cpp  cl_svm_allocator.h  context.h  context_data.h  engine.cpp  engine.h  mem_allocator.cpp  mem_allocator.h  meson.build  nntrainer_error.h  nntrainer_log.h  nntrainer_logger.cpp  nntrainer_logger.h  qnn_context.cpp  qnn_context.h
nntrainer/qnn/: meson.build
nntrainer/qnn/jni/: iotensor_wrapper.hpp  meson.build  qnn_context.cpp  qnn_context.h  qnn_context_var.h  qnn_rpc_manager.cpp  qnn_rpc_manager.h
nntrainer/qnn/jni/qnn/: meson.build  qnn_properties.cpp  qnn_properties.h
nntrainer/qnn/jni/qnn-api/: BackendExtensions.cpp  IBackend.hpp  meson.build
nntrainer/qnn/jni/qnn/Log/: meson.build
nntrainer/qnn/jni/qnn/PAL/: meson.build
nntrainer/qnn/jni/qnn/QNN/: meson.build
nntrainer/qnn/jni/qnn/QNN/GPU.unused/: meson.build
nntrainer/qnn/jni/qnn/QNN/HTP/: meson.build
nntrainer/qnn/jni/qnn/QNN/System/: meson.build
nntrainer/qnn/jni/qnn/Utils/: BuildId.hpp  DynamicLoadUtil.hpp  IOTensor.hpp  QnnSampleAppUtils.hpp  meson.build
nntrainer/qnn/jni/qnn/WrapperUtils/: meson.build
nntrainer/qnn/jni/qnn/op/: QNNGraph.cpp  QNNGraph.h  QNNLinear.cpp  QNNLinear.h  meson.build
nntrainer/qnn/jni/qnn/tools/: update_qnn_version.py
nntrainer/tensor/cpu_backend/arm/kai/: kai_common.h  meson.build
nntrainer/tensor/cpu_backend/arm/kai/matmul_clamp_f32_qai8dxp_qsi4cxp/: kai_matmul_clamp_f32_qai8dxp1vlx4_qsi4cxp4vlx4_1vlx4vl_sme_mopa.c  kai_matmul_clamp_f32_qai8dxp1vlx4_qsi4cxp4vlx4_1vlx4vl_sme_mopa_asm.S  meson.build
nntrainer/tensor/cpu_backend/arm/kai/matmul_clamp_f32_qsi8d32p_qsi4c32p/: kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p4x4_1x4_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p4x4_1x4_neon_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p8x4_1x8_sve_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x4_qsi4c32p8x4_1x8_sve_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p4x8_1x4x32_neon_dotprod.h  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p8x8_1x8_sve_dotprod.c  kai_matmul_clamp_f32_qsi8d32p1x8_qsi4c32p8x8_1x8_sve_dotprod.h  kai_matmul_clamp_f32_qsi8d32p4x4_qsi4c32p4x4_16x4_neon_dotprod.c  kai_matmul_clamp_f32_qsi8d32p4x4_qsi4c32p4x4_16x4_neon_dotprod.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_16x4_neon_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_16x4_neon_i8mm.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p4x8_8x4x32_neon_i8mm.h  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p8x8_16x8_sve_i8mm.c  kai_matmul_clamp_f32_qsi8d32p4x8_qsi4c32p8x8_16x8_sve_i8mm.h  kai_matmul_clamp_f32_qsi8d32p_qsi4c32p_interface.h  meson.build
nntrainer/tensor/cpu_backend/arm/kai/pack/: kai_lhs_quant_pack_qsi8d32p_f32.c  kai_lhs_quant_pack_qsi8d32p_f32.h  kai_lhs_quant_pack_qsi8d32p_f32_neon.c  kai_lhs_quant_pack_qsi8d32p_f32_neon.h  kai_rhs_pack_nxk_qsi4c32pscalef16_qsu4c32s16s0.c  kai_rhs_pack_nxk_qsi4c32pscalef16_qsu4c32s16s0.h  meson.build
packaging/: nntrainer.spec
tasks/: lessons.md  todo.md
test/: meson.build  nntrainer_test_util.cpp
tools/: BONSAI_GUIDE.md  gguf_to_nntrainer.py  meson.build  package_android.sh
torch.fx/: README.md  convert_trans.py
(+1238 files in other folders)
