htp_headers=[
'QnnHtpContext.h',
'QnnHtpGraph.h',
'QnnHtpPerfInfrastructure.h',
'QnnHtpProperty.h',
'QnnHtpCommon.h',
'QnnHtpDevice.h',
'QnnHtpMem.h',
'QnnHtpProfile.h',
'QnnHtpSystemContext.h',
'core/afuncs.h',
'core/flags.h',
'core/opname_tag.h',
'core/serialize.h',
'core/allocator.h',
'core/float16.h',
'core/op_package_feature_support.h',
'core/serialize_oplist.h',
'core/bake_defs.h',
'core/forward_classes.h',
'core/op_package_name.h',
'core/serialize_register.h',
'core/build_options.h',
'core/graph_status.h',
'core/op_register_ext.h',
'core/serializer.h',
'core/builtin_intrinsics.h',
'core/hvx_mathops.h',
'core/op_register.h',
'core/serialize_tensors.h',
'core/cc_pp.h',
'core/interface_defs.h',
'core/op_register_types.h',
'core/shape.h',
'core/check_hvx.h',
'core/intrinsics.h',
'core/op_registry.h',
'core/simple_op.h',
'core/const_extent_descriptor.h',
'core/is_detected.h',
'core/ops_opts_registration_defs.h',
'core/simple_reg.h',
'core/constraints.h',
'core/log.h',
'core/ops_opts_registration.h',
'core/splithist.h',
'core/conversions.h',
'core/macros_attribute.h',
'core/optim_filter.h',
'core/string_registry2.h',
'core/cost_funcs.h',
'core/match_op.h',
'core/optimize_defs.h',
'core/template_help.h',
'core/cost.h',
'core/memory_layout.h',
'core/optimize_flags.h',
'core/template_help_tensor_ext.h',
'core/crate.h',
'core/minihash.h',
'core/optimize.h',
'core/tensor.h',
'core/c_tricks.h',
'core/oexpr.h',
'core/op_utils.h',
'core/tensor_info.h',
'core/deserializer.h',
'core/oexpr_post.h',
'core/padding.h',
'core/tile_extract.h',
'core/deserialize_tensors.h',
'core/op_def.h',
'core/perf_timing.h',
'core/type_help.h',
'core/dtype_enum.h',
'core/op_extra_info.h',
'core/pickle_header_tags.h',
'core/type_name.h',
'core/dtype.h',
'core/op.h',
'core/serdes_tensors.h',
'core/unique_types.h',
'core/executable.h',
'core/op_info.h',
'core/serialize_defs.h',
'core/weak_linkage.h',
]

qnn_dir_include_dir = nntrainer_prefix / 'include' / 'nntrainer' / 'npu' / 'qnn' / 'QNN'

install_subdir ('HTP', install_dir : qnn_dir_include_dir )

install_subdir ('core', install_dir : qnn_dir_include_dir / 'HTP' )

install_headers(htp_headers, install_dir : qnn_dir_include_dir / 'HTP')