system_headers=[
'QnnSystemCommon.h',
'QnnSystemContext.h',
'QnnSystemInterface.h',
]

qnn_dir_include_dir = nntrainer_prefix / 'include' / 'nntrainer' / 'npu' / 'qnn' / 'QNN'

install_subdir ('System', install_dir : qnn_dir_include_dir )

install_headers(system_headers, install_dir : qnn_dir_include_dir / 'System')